inlämning1/style.css
body{
    margin: 0px;
}

ul {
    list-style-type: none;
    color: white;
}

h1,
form {
    text-align: center;
    color: white;
}

body {
    background-image: url("wallpaper.jpg");
    width: 100%;
}

#buttonDiv{
    text-align: center;
}

#pictureList {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
}
#pictureList img{
    width: 90%;
    height: 90%;
    object-fit: cover;
}

@media (max-width: 1200px)
{
#pictureList{
    grid-template-columns: repeat(3, 1fr);
}
}

@media (max-width: 900px)
{
#pictureList
{
    grid-template-columns: repeat(2, 1fr);
}
}

@media (max-width: 600px)
{
#pictureList
{
    grid-template-columns: repeat(1, 1fr);
}
}
/* Style all inside pictureList since we append everything to it */

